Adding new Containers to adapt to new index.js

--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
 <body>
 	<center>
 	<h2>Projekt DRT - Version 0.2</h2>
-	<canvas id="game"></canvas><br><button id="consoleOutput">Konsolenausgabe</button><br>
+	<canvas id="game"></canvas><canvas id="event"></canvas><br><button id="consoleOutput">Konsolenausgabe</button><br>
+	<div id="controls">
 	<button id="MoveUp">Nach Oben</button><br>
 	<button id="MoveLeft">Nach Links</button> - <button id="MoveRight">Nach Rechts</button><br>
 	<button id="MoveDown">Nach Unten</button>
+	</div>
+	<div id="event-container"></div>
 	</center>
 	<script src="./js/index.js"></script>
 	<script src="./js/draw_elements.js"></script>
