--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>DRT - v0.2</title>
 	<script type="text/javascript" src="./js/blockades.js"></script>
+	<script type="text/javascript" src="./js/skills.js"></script>
+	<script src="./js/entities.js"></script>
 	<script src="./js/events.js"></script>
 	<style type="text/css">
 		body {
@@ -19,6 +21,10 @@
 			background: #ccc;
 			display: block;
 		}
+		
+		.event-controls-fight {
+			display: none;
+		}
 	</style>
 </head>
 <body>
@@ -29,8 +35,12 @@
 	<button id="MoveUp">Nach Oben</button><br>
 	<button id="MoveLeft">Nach Links</button> - <button id="MoveRight">Nach Rechts</button><br>
 	<button id="MoveDown">Nach Unten</button>
+	</div><br>
+	<div id="event-container" class="event-container"></div><br>
+	<div id="event-controls-fight" class="event-controls-fight">
+	KAMPF - STEUERUNG:<br>
+	<button id="slot1"></button> - <button id="slot2"></button> - <button id="slot3"></button>
 	</div>
-	<div id="event-container"></div>
 	</center>
 	<script src="./js/index.js"></script>
 	<script src="./js/draw_elements.js"></script>
