--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 	
 		canvas {
 			border: 1px solid black;
-			background: #ccc;
 			display: block;
 		}
 		
@@ -37,7 +36,7 @@
 	<h2>Projekt DRT - Version 0.2</h2>
 	<table style="width:100%">
 		<tr>
-			<td valign="top">
+			<td valign="top" width="150">
 				<div id="stats-left" class="stats-left">
 					Aktueller Spieler:<br><br>
 					<center><p id="statusbarPlayerName">(SPIELERNAME)</p></center><br>
@@ -49,10 +48,16 @@
 					<center><p id="statusbarPlayerAP">(AKTIONSPUNKTE)</p></center><br>
 				</div>
 			</td>
-			<td>
-				<center><canvas id="game"></canvas><canvas id="event"></canvas></center>
+			<td valign="top" width="600">
+				<center>
+					<div id="canvasAll" style="position: relative;">
+						<canvas id="game" style="position: absolute; z-index: 0;"></canvas>
+						<canvas id="event" style="position: absolute; z-index: 1;"></canvas>
+						<canvas id="eventAnimation" style="position: absolute; z-index: 2;"></canvas>
+					</div>
+				</center>
 			</td>
-			<td valign="top">
+			<td valign="top" width="150">
 				<div id="stats-right" class="stats-right">
 					Aktueller NPC:<br><br>
 					<center><p id="statusbarNPCName">(NPCNAME)</p></center><br>
@@ -64,17 +69,17 @@
 			</td>
 		</tr>
 	</table>
-	<br><button id="consoleOutput">Konsolenausgabe</button><br>
 	<div id="controls">
+	<br><br>
 	<button id="MoveUp">Nach Oben</button><br>
 	<button id="MoveLeft">Nach Links</button> - <button id="MoveRight">Nach Rechts</button><br>
 	<button id="MoveDown">Nach Unten</button>
-	</div><br>
-	<div id="event-container" class="event-container"></div><br>
+	</div>
+	<div id="event-container" class="event-container"></div>
 	<div id="event-controls-fight" class="event-controls-fight">
-	KAMPF - STEUERUNG:<br>
 	<button id="slot1"></button> - <button id="slot2"></button> - <button id="slot3"></button> - <button id="slot4"></button>
 	</div>
+	<br><button id="consoleOutput">Konsolenausgabe</button><br>
 	</center>
 	<script src="./js/index.js"></script>
 	<script src="./js/draw_elements.js"></script>
