--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		  right: 0; 
 		  margin-left: auto; 
 		  margin-right: auto; 
-		  width: 600px; /* Need a specific value to work */
+		  width: 600px; 
 		}
 		
 	</style>
